--- a/BTL/AN_QUAY_DI/An.html
+++ b/BTL/AN_QUAY_DI/An.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenh14 </title>
     <link rel="stylesheet" href="../CSS_1/style.css">
-    <script src="/BTL/Scrip.js/script.js"></script>
+    <script src="../Scrip.js/script.js"></script>
     <!-- Thêm liên kết Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="shortcut icon" href="https://kenh14cdn.com/web_images/kenh14-favicon.ico" type="image/x-icon">
@@ -37,19 +37,19 @@
     <div class="body">
         <div class="one">
             <section>
-                <a href="#"><img src="/BTL/images/logo_k14anquaydi.svg" width="150px"></a>
+                <a href="#"><img src="../images/logo_k14anquaydi.svg" width="150px"></a>
             </section>
             <aside>
-                <a href="An.html"><img src="/BTL/images/logoAn.png" width="120px"></a>
-                <a href="Quay.html"><img src="/BTL/images/logoQuay.png"width="120px"></a>
-                <a href="Di.html"><img src="/BTL/images/logoDi.png"width="120px"></a>
+                <a href="An.html"><img src="../images/logoAn.png" width="120px"></a>
+                <a href="Quay.html"><img src="../images/logoQuay.png"width="120px"></a>
+                <a href="Di.html"><img src="../images/logoDi.png"width="120px"></a>
                 <p>Khám phá những địa điểm du lịch, vui chơi, nhà hàng quán cafe hấp dẫn!</p>
             </aside>
         </div>
         <div class="two">
             <section>
                 <div class="box_1">
-                    <a href="#"><img src="/BTL/images/anh327.png" width="490px" height="300px"></a>
+                    <a href="#"><img src="../images/anh327.png" width="490px" height="300px"></a>
                 </div>
                 <p><b><a href="#">Khi sao Việt bước vào địa hạt F&B: Tăng Thanh Hà mở 3 cơ sở nhà hàng, toàn ở vị trí...</a></b></p>
                 <p><time>1 giờ trước</time></p>
@@ -58,7 +58,7 @@
             <aside>
                 <div class="data">
                     <div class="box_2">
-                        <a href="#"><img src="/BTL/images/anh328.png" width="100px" height="120px"></a>
+                        <a href="#"><img src="../images/anh328.png" width="100px" height="120px"></a>
                     </div>
                     <div class="box_2_1">
                         <span><b><a href="#">Hải Tú bất ngờ nhắc đến “ngôi nhà riêng” khi đứng trong khách sạn ở Bangkok, điều gì...</a></b></span><br>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="data">
                     <div class="box_2">
-                        <a href="#"><img src="/BTL/images/anh329.png" width="100px" height="120px"></a>
+                        <a href="#"><img src="../images/anh329.png" width="100px" height="120px"></a>
                     </div>
                     <div class="box_2_1">
                         <span><b><a href="#">Du khách nườm nượp đến chợ Hàn, giao thông ùn tắc</a></b></span><br>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="data">
                     <div class="box_2">
-                        <a href="#"><img src="/BTL/images/anh330.png" width="100px" height="120px"></a>
+                        <a href="#"><img src="../images/anh330.png" width="100px" height="120px"></a>
                        </div>
                     <div class="box_2_1">
                         <span><b><a href="#">Công thức làm sắn hấp cốt dừa dẻo thơm</a></b></span><br>
@@ -88,30 +88,30 @@
 
         <div class="three">
             <div class="logo-1">
-                <p><a href="#"><img src="/BTL/images/anh331.png"></a></p>
+                <p><a href="#"><img src="../images/anh331.png"></a></p>
             </div>
             <div class="logo-1">
-                <p><a href="#"><img src="/BTL/images/anh332.png"></a></p>
+                <p><a href="#"><img src="../images/anh332.png"></a></p>
             </div>
             <div class="logo-1">
-                <p><a href="#"><img src="/BTL/images/anh333.png"></a></p>
+                <p><a href="#"><img src="../images/anh333.png"></a></p>
             </div>
             <div class="logo-1">
-                <p><a href="#"><img src="/BTL/images/anh334.png"></a></p>
+                <p><a href="#"><img src="../images/anh334.png"></a></p>
             </div>
         </div>
 
         <div class="four">
             <section>
                 <div class="four_1">
-                    <p><a href="#"><img src="/BTL/images/anh335.png"></a></p>
+                    <p><a href="#"><img src="../images/anh335.png"></a></p>
                 </div>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 11 ngày trước</time></span><br>
                 <span><a href="#"><b>Sáng mùa thu Hà Nội ghé sạp xôi giữa phố xá nhịp, nghe tâm sự cô bán hàng người làng Phú Thượng: Bán xôi mua nhà lầu xe hơi được không?</b></a></span>
             </section>
             <aside>
                 <div class="four_1">
-                    <p><a href="#"><img src="/BTL/images/anh336.png"></a></p>
+                    <p><a href="#"><img src="../images/anh336.png"></a></p>
                 </div>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 12 ngày trước</time></span><br>
                 <span><a href="#"><b>Starbucks khai trương cơ sở mới: Nơi chill từ sáng sớm, nơi nằm gọn trong TTTM lại khiến dân tình “mừng rớt nước mắt”</b></a></span>
@@ -120,14 +120,14 @@
         <div class="four">
             <section>
                 <div class="four_1">
-                    <p><a href="#"><img src="/BTL/images/anh337.png"></a></p>
+                    <p><a href="#"><img src="../images/anh337.png"></a></p>
                 </div>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 13 ngày trước</time></span><br>
                 <span><a href="#"><b>Hàng bánh đúc nóng "huyền thoại" 30 năm gắn với tuổi thơ nhiều người Hà Nội, trời thu này mà đi ăn là tuyệt nhất!</b></a></span>
             </section>
             <aside>
                 <div class="four_1">
-                    <p><a href="#"><img src="/BTL/images/anh338.png"></a></p>
+                    <p><a href="#"><img src="../images/anh338.png"></a></p>
                 </div>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 7 ngày trước</time></span><br>
                 <span><a href="#"><b>Một ngày khám phá "thiên đường ẩm thực" Bangkok</b></a></span>
@@ -136,19 +136,19 @@
 
         <div class="table-max"> 
             <div class="table-max-1">
-                <span><img src="/BTL/images/logo3.png"><b>Editor’s Choice</b></span>
+                <span><img src="../images/logo3.png"><b>Editor’s Choice</b></span>
             </div>
             <div class="table-max-2">
                 <div class="table-max-2-1">
                     <div class="table-max-2-2">
-                        <a href="#"><img src="/BTL/images/anh343.png"></a>
+                        <a href="#"><img src="../images/anh343.png"></a>
                     </div>
                     <p><time>8 ngày trước</time></p>
                     <span><a href="#"><b>Độc đáo trải nghiệm ăn bún riêu trong không gian "quý tộc" toàn đồ cổ ở Hà Nội: Bà chủ nổi tiếng phố cổ mấy chục năm, nay bán vì... đam mê</b></a></span>
                 </div>
                 <div class="table-max-2-1">
                     <div class="table-max-2-2">
-                        <a href="#"><img src="/BTL/images/anh344.png"> </a>
+                        <a href="#"><img src="../images/anh344.png"> </a>
                     </div>
                     <p><time>20 ngày trước</time></p>
                     <span><a href="#"><b>Hà Nội mùa thu "xịn" đây rồi, 10 điểm!</b></a></span>
@@ -156,7 +156,7 @@
 
                 <div class="table-max-2-1">
                     <div class="table-max-2-2">
-                        <a href="#"><img src="/BTL/images/anh345.png"> </a>
+                        <a href="#"><img src="../images/anh345.png"> </a>
                     </div>
                     <p><time>1 tháng trước</time></p>
                     <span><a href="#"><b>Gió mùa Đông Bắc ùa về, mau lập team "oanh tạc" những món ngon hết sảy này ở Hà Nội ngay thôi</b></a></span>
@@ -166,7 +166,7 @@
 
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh339.png"></a></p>
+                <p><a href="#"><img src="../images/anh339.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 5 giờ trước</time></span>
@@ -176,7 +176,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh340.png"></a></p>
+                <p><a href="#"><img src="../images/anh340.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 6 giờ trước</time></span>
@@ -186,7 +186,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh341.png"></a></p>
+                <p><a href="#"><img src="../images/anh341.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 6 giờ trước</time></span>
@@ -196,7 +196,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh342.png"></a></p>
+                <p><a href="#"><img src="../images/anh342.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 7 giờ trước</time></span>
@@ -206,7 +206,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh346.png"></a></p>
+                <p><a href="#"><img src="../images/anh346.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 7 giờ trước</time></span>
@@ -216,7 +216,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh347.png"></a></p>
+                <p><a href="#"><img src="../images/anh347.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 10 giờ trước</time></span>
@@ -226,7 +226,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh348.png"></a></p>
+                <p><a href="#"><img src="../images/anh348.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 12 giờ trước</time></span>
@@ -236,7 +236,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh349.png"></a></p>
+                <p><a href="#"><img src="../images/anh349.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 13 giờ trước</time></span>
@@ -246,7 +246,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh350.png"></a></p>
+                <p><a href="#"><img src="../images/anh350.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 13 giờ trước</time></span>
@@ -256,7 +256,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh351.png"></a></p>
+                <p><a href="#"><img src="../images/anh351.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 23 giờ trước</time></span>
@@ -266,7 +266,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh352.png"></a></p>
+                <p><a href="#"><img src="../images/anh352.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 24 giờ trước</time></span>
@@ -276,7 +276,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh353.png"></a></p>
+                <p><a href="#"><img src="../images/anh353.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 23 giờ trước</time></span>
@@ -286,7 +286,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh354.png"></a></p>
+                <p><a href="#"><img src="../images/anh354.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 1 ngày trước</time></span>
@@ -296,7 +296,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh355.png"></a></p>
+                <p><a href="#"><img src="../images/anh355.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 1 ngày trước</time></span>
@@ -315,17 +315,17 @@
                 <tr>
                     <td>
                         <section>
-                            <a href=""><img src="/BTL/images/logo1.png" ></img></a>
+                            <a href=""><img src="../images/logo1.png" ></img></a>
                         </section>
                         <aside>
                             <p><b>ĐÓNG GÓP NỘI DUNG</b></p>
                             <div class="footer-table-mini">
                                 <div class="footer-mini1">
-                                    <a href="#"><img src="/BTL/images/logodauHoi.png" width="20px"></a>
+                                    <a href="#"><img src="../images/logodauHoi.png" width="20px"></a>
                                     <input type="button" value="CÂU HỎI THƯỜNG GẶP">
                                 </div>
                                 <div class="footer-mini2">
-                                    <a href="#"><img src="/BTL/images/logoEmaildo.png" width="25px"></a>
+                                    <a href="#"><img src="../images/logoEmaildo.png" width="25px"></a>
                                     <p><a href="#">bandoc@kenh14</a></p>
                                 </div>
                             </div>
@@ -336,7 +336,7 @@
             </table>
         </div>
         <div class="footer-table2">
-            <a href="#"><img src="/BTL/images/logo2.png" width="530px" height="130px"></img></a>
+            <a href="#"><img src="../images/logo2.png" width="530px" height="130px"></img></a>
         </div>
     </div>
 
@@ -346,7 +346,7 @@
             <span>Tầng 21, Tòa nhà Center Building, Hapulico Complex, số 1 Nguyễn Huy Tưởng, phường Thanh Xuân Trung, quận Thanh Xuân, Hà Nội.</span><br>
             <span>Điện thoại: 024 7309 5555, máy lẻ 62.370</span>
             <div class="logo-mini">
-                <a href="#"><img src="/BTL/images/logoDC.png" width="17px"></a>
+                <a href="#"><img src="../images/logoDC.png" width="17px"></a>
                 <span><b><a href="#">XEM BẢN ĐỒ</a></b></span>
             </div>
 
@@ -355,7 +355,7 @@
                 <span>Tầng 4, Tòa nhà 123, số 127 Võ Văn Tần, phường 6, quận 3, TP. Hồ Chí Minh.</span><br>
                 <span>Điện thoại: 028 7307 7979</span>
                 <div class="logo-mini">
-                    <a href="#"><img src="/BTL/images/logoDC.png" width="15px"></a>
+                    <a href="#"><img src="../images/logoDC.png" width="15px"></a>
                     <span><b><a href="#">XEM BẢN ĐỒ</a></b></span>
                 </div>
             </div>    
@@ -366,20 +366,20 @@
             <span>Bà Nguyễn Bích Minh</span><br>
             <h4>HỢP TÁC TRUYỀN THÔNG</h4>
             <div class="logo-mini">
-                <img src="/BTL/images/logoDT.png" width="20px"></a>
+                <img src="../images/logoDT.png" width="20px"></a>
                 <span>024.73095555 (máy lẻ 62.370)</span><br>
             </div>
             <div class="logo-mini-1">
-                <a href="#"><img src="/BTL/images/logoThu.png" width="30px"></a>
+                <a href="#"><img src="../images/logoThu.png" width="30px"></a>
                 <span><a href="mailto:giaitrixahoi@admicro.vn">giaitrixahoi@admicro.vn</a></span>
             </div>
             <h4>LIÊN HỆ QUẢNG CÁO</h4>
             <div class="logo-mini">
-                <img src="/BTL/images/logoDT.png" width="20px"></a>
+                <img src="../images/logoDT.png" width="20px"></a>
                 <span>02473007108</span>
             </div>
             <div class="logo-mini-1">
-                <a href="#"><img src="/BTL/images/logoThu.png" width="30px"></a>
+                <a href="#"><img src="../images/logoThu.png" width="30px"></a>
                 <span><a href="mailto:giaitrixahoi@admicro.vn">giaitrixahoi@admicro.vn</a></span>
             </div>
             <div class="chat-table-1">
@@ -394,7 +394,7 @@
         </div>
         <hr class="DK"/>
         <div class="footer-mini-three">
-            <a href=""><img src="/BTL/images/logoVCCorp.png" width="120px" ></a>
+            <a href=""><img src="../images/logoVCCorp.png" width="120px" ></a>
             <p>© Copyright 2007 - 2024 – <b>Công ty Cổ phần VCCorp</b></p>
             <p>Tầng 17, 19, 20, 21 Tòa nhà Center Building - Hapulico Complex, Số 1 Nguyễn Huy Tưởng, Thanh Xuân, Hà Nội.</p>
             <p>Giấy phép thiết lập trang thông tin điện tử tổng hợp trên mạng số 2215/GP-TTĐT do Sở Thông tin và Truyền thông Hà Nội cấp ngày 10 tháng 4 năm 2019</p>
