--- a/BTL/AN_QUAY_DI/Di.html
+++ b/BTL/AN_QUAY_DI/Di.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenh14 </title>
-    <link rel="stylesheet" href="/BTL/CSS_1/style.css">
-    <script src="/BTL/Scrip.js/script.js"></script>
+    <link rel="stylesheet" href="../CSS_1/style.css">
+    <script src="../Scrip.js/script.js"></script>
     <!-- Thêm liên kết Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="shortcut icon" href="https://kenh14cdn.com/web_images/kenh14-favicon.ico" type="image/x-icon">
-    <!-- Linking SwiperJS CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <!-- Linking SwiperJS script -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <!-- Linking SwiperJS CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+        <!-- Linking SwiperJS script -->
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 <body>
     <header>
@@ -37,19 +37,19 @@
     <div class="body">
         <div class="one">
             <section>
-                <a href="#"><img src="/BTL/images/logo_k14anquaydi.svg" width="150px"></a>
+                <a href="#"><img src="../images/logo_k14anquaydi.svg" width="150px"></a>
             </section>
             <aside>
-                <a href="An.html"><img src="/BTL/images/logoAn.png" width="120px"></a>
-                <a href="Quay.html"><img src="/BTL/images/logoQuay.png"width="120px"></a>
-                <a href="Di.html"><img src="/BTL/images/logoDi.png"width="120px"></a>
+                <a href="An.html"><img src="../images/logoAn.png" width="120px"></a>
+                <a href="Quay.html"><img src="../images/logoQuay.png"width="120px"></a>
+                <a href="Di.html"><img src="../images/logoDi.png"width="120px"></a>
                 <p>Khám phá những địa điểm du lịch, vui chơi, nhà hàng quán cafe hấp dẫn!</p>
             </aside>
         </div>
         <div class="two_2">
             <section>
                 <div class="box_1_2">
-                    <a href="#"><img src="/BTL/images/anh497.png" width="600px" height="400px"></a>
+                    <a href="#"><img src="../images/anh497.png" width="600px" height="400px"></a>
                 </div>
                 <p><b><a href="#">Thái Lan chuẩn bị thu thuế du lịch</a></b></p>
                 <p><time>2 ngày trước</time></p>
@@ -57,12 +57,12 @@
             </section>
             <aside>
                 <div class="box_2_4">
-                    <a href="#"><img src="/BTL/images/anh498.png" width="285px" height="170px"></a>
+                    <a href="#"><img src="../images/anh498.png" width="285px" height="170px"></a>
                 </div>
                     <span><b><a href="#">Khi nghệ thuật len lỏi vào hàng quán bình dân tại Hà Nội: “Quá sáng tạo và đẹp như...</a></b></span><br>
                     <span><time>3 ngày trước</time></span>
                 <div class="box_2_5">
-                    <a href="#"><img src="/BTL/images/anh499.png" width="285px" height="170px"></a>
+                    <a href="#"><img src="../images/anh499.png" width="285px" height="170px"></a>
                 </div>
                     <span><b><a href="#">Chỗ ngồi 80 triệu đồng tại concert Anh Trai Vượt Ngàn Chông Gai “đỉnh nóc” như...</a></b></span><br>
                     <span><time>3 ngày trước</time></span>
@@ -71,7 +71,7 @@
 
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh500.png"></a></p>
+                <p><a href="#"><img src="../images/anh500.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 4 ngày trước</time></span>
@@ -81,7 +81,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh501.png"></a></p>
+                <p><a href="#"><img src="../images/anh501.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 5 ngày trước</time></span>
@@ -91,7 +91,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh502.png"></a></p>
+                <p><a href="#"><img src="../images/anh502.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 5 ngày trước</time></span>
@@ -101,7 +101,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh503.png"></a></p>
+                <p><a href="#"><img src="../images/anh503.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 5 ngày trước</time></span>
@@ -111,7 +111,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh504.png"></a></p>
+                <p><a href="#"><img src="../images/anh504.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 5 ngày trước</time></span>
@@ -121,7 +121,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh505.png"></a></p>
+                <p><a href="#"><img src="../images/anh505.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 6 ngày trước</time></span>
@@ -131,7 +131,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh506.png"></a></p>
+                <p><a href="#"><img src="../images/anh506.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 6 ngày trước</time></span>
@@ -141,7 +141,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh507.png"></a></p>
+                <p><a href="#"><img src="../images/anh507.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 6 ngày trước</time></span>
@@ -151,7 +151,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh508.png"></a></p>
+                <p><a href="#"><img src="../images/anh508.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 6 ngày trước</time></span>
@@ -161,7 +161,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh509.png"></a></p>
+                <p><a href="#"><img src="../images/anh509.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 7 ngày trước</time></span>
@@ -171,7 +171,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh510.png"></a></p>
+                <p><a href="#"><img src="../images/anh510.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 8 ngày trước</time></span>
@@ -181,7 +181,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh511.png"></a></p>
+                <p><a href="#"><img src="../images/anh511.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 8 ngày trước</time></span>
@@ -191,7 +191,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh512.png"></a></p>
+                <p><a href="#"><img src="../images/anh512.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 9 ngày trước</time></span>
@@ -201,7 +201,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh513.png"></a></p>
+                <p><a href="#"><img src="../images/anh513.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 10 ngày trước</time></span>
@@ -210,7 +210,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh514.png"></a></p>
+                <p><a href="#"><img src="../images/anh514.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 10 ngày trước</time></span>
@@ -220,7 +220,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh515.png"></a></p>
+                <p><a href="#"><img src="../images/anh515.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 10 ngày trước</time></span>
@@ -238,17 +238,17 @@
                 <tr>
                     <td>
                         <section>
-                            <a href=""><img src="/BTL/images/logo1.png" ></img></a>
+                            <a href=""><img src="../images/logo1.png" ></img></a>
                         </section>
                         <aside>
                             <p><b>ĐÓNG GÓP NỘI DUNG</b></p>
                             <div class="footer-table-mini">
                                 <div class="footer-mini1">
-                                    <a href="#"><img src="/BTL/images/logodauHoi.png" width="20px"></a>
+                                    <a href="#"><img src="../images/logodauHoi.png" width="20px"></a>
                                     <input type="button" value="CÂU HỎI THƯỜNG GẶP">
                                 </div>
                                 <div class="footer-mini2">
-                                    <a href="#"><img src="/BTL/images/logoEmaildo.png" width="25px"></a>
+                                    <a href="#"><img src="../images/logoEmaildo.png" width="25px"></a>
                                     <p><a href="#">bandoc@kenh14</a></p>
                                 </div>
                             </div>
@@ -259,7 +259,7 @@
             </table>
         </div>
         <div class="footer-table2">
-            <a href="#"><img src="/BTL/images/logo2.png" width="530px" height="130px"></img></a>
+            <a href="#"><img src="../images/logo2.png" width="530px" height="130px"></img></a>
         </div>
     </div>
 
@@ -269,7 +269,7 @@
             <span>Tầng 21, Tòa nhà Center Building, Hapulico Complex, số 1 Nguyễn Huy Tưởng, phường Thanh Xuân Trung, quận Thanh Xuân, Hà Nội.</span><br>
             <span>Điện thoại: 024 7309 5555, máy lẻ 62.370</span>
             <div class="logo-mini">
-                <a href="#"><img src="/BTL/images/logoDC.png" width="17px"></a>
+                <a href="#"><img src="../images/logoDC.png" width="17px"></a>
                 <span><b><a href="#">XEM BẢN ĐỒ</a></b></span>
             </div>
 
@@ -278,7 +278,7 @@
                 <span>Tầng 4, Tòa nhà 123, số 127 Võ Văn Tần, phường 6, quận 3, TP. Hồ Chí Minh.</span><br>
                 <span>Điện thoại: 028 7307 7979</span>
                 <div class="logo-mini">
-                    <a href="#"><img src="/BTL/images/logoDC.png" width="15px"></a>
+                    <a href="#"><img src="../images/logoDC.png" width="15px"></a>
                     <span><b><a href="#">XEM BẢN ĐỒ</a></b></span>
                 </div>
             </div>    
@@ -289,20 +289,20 @@
             <span>Bà Nguyễn Bích Minh</span><br>
             <h4>HỢP TÁC TRUYỀN THÔNG</h4>
             <div class="logo-mini">
-                <img src="/BTL/images/logoDT.png" width="20px"></a>
+                <img src="../images/logoDT.png" width="20px"></a>
                 <span>024.73095555 (máy lẻ 62.370)</span><br>
             </div>
             <div class="logo-mini-1">
-                <a href="#"><img src="/BTL/images/logoThu.png" width="30px"></a>
+                <a href="#"><img src="../images/logoThu.png" width="30px"></a>
                 <span><a href="mailto:giaitrixahoi@admicro.vn">giaitrixahoi@admicro.vn</a></span>
             </div>
             <h4>LIÊN HỆ QUẢNG CÁO</h4>
             <div class="logo-mini">
-                <img src="/BTL/images/logoDT.png" width="20px"></a>
+                <img src="../images/logoDT.png" width="20px"></a>
                 <span>02473007108</span>
             </div>
             <div class="logo-mini-1">
-                <a href="#"><img src="/BTL/images/logoThu.png" width="30px"></a>
+                <a href="#"><img src="../images/logoThu.png" width="30px"></a>
                 <span><a href="mailto:giaitrixahoi@admicro.vn">giaitrixahoi@admicro.vn</a></span>
             </div>
             <div class="chat-table-1">
@@ -317,7 +317,7 @@
         </div>
         <hr class="DK"/>
         <div class="footer-mini-three">
-            <a href=""><img src="/BTL/images/logoVCCorp.png" width="120px" ></a>
+            <a href=""><img src="../images/logoVCCorp.png" width="120px" ></a>
             <p>© Copyright 2007 - 2024 – <b>Công ty Cổ phần VCCorp</b></p>
             <p>Tầng 17, 19, 20, 21 Tòa nhà Center Building - Hapulico Complex, Số 1 Nguyễn Huy Tưởng, Thanh Xuân, Hà Nội.</p>
             <p>Giấy phép thiết lập trang thông tin điện tử tổng hợp trên mạng số 2215/GP-TTĐT do Sở Thông tin và Truyền thông Hà Nội cấp ngày 10 tháng 4 năm 2019</p>
