--- a/BTL/DOI_SONG/DoiSong.html
+++ b/BTL/DOI_SONG/DoiSong.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenh14 </title>
-    <link rel="stylesheet" href="/BTL/CSS_1/styles.css">
+    <link rel="stylesheet" href="../CSS_1/styles.css">
     <link rel="import" href="component.html">
-    <script src="/BTL/Scrip.js/script.js"></script>
+    <script src="../Scrip.js/script.js"></script>
     <!-- Thêm liên kết Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="shortcut icon" href="https://kenh14cdn.com/web_images/kenh14-favicon.ico" type="image/x-icon">
@@ -40,7 +40,7 @@
         <div class="main-header">
             <div class="container">
                 <div class="logo">
-                    <img src="/BTL/images/logo.png" alt="Kenh14 Logo">
+                    <img src="../images/logo.png" alt="Kenh14 Logo">
                     <div class="logo-text">
                         <span class="logo-main">kenh14.vn</span>
                         <span class="logo-sub">TRANG THÔNG TIN ĐIỆN TỬ TỔNG HỢP</span>
